--- a/pom.xml
+++ b/pom.xml
@@ -75,16 +75,15 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <!-- <dependency>
+         <!--<dependency>
              <groupId>io.micrometer</groupId>
              <artifactId>micrometer-tracing-bridge-otel</artifactId>
          </dependency>
          <dependency>
              <groupId>io.opentelemetry</groupId>
              <artifactId>opentelemetry-exporter-zipkin</artifactId>
-         </dependency>
-         &lt;!&ndash; https://mvnrepository.com/artifact/com.github.loki4j/loki-logback-appender &ndash;&gt;
-         <dependency>
+         </dependency>-->
+         <!-- <dependency>
              <groupId>com.github.loki4j</groupId>
              <artifactId>loki-logback-appender</artifactId>
              <version>1.5.2</version>
